# retropocket

./: .gitignore  LICENSE  README.md
back/: .clangd  CMakeLists.txt  cross-compile-arm.sh  main.cpp
back/build-aarch64/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
back/cmake/: aarch64-linux-gnu.cmake
back/include/: Bluetooth.hpp  BluetoothDevice.hpp  System.hpp  Tools.hpp  Update.hpp
back/include/handlers/: BluetoothHandler.hpp  SystemHandler.hpp  UpdateHandler.hpp  WifiHandler.hpp
back/templates/: ap.mustache.yaml  ap.yaml  bluetooth.mustache.html  bluetoothTableTpl.mustache.html  client.mustache.yaml  client.yaml  retropocket.mustache.conf  sway.mustache.cfg  update.mustache.html
network/: wifi.yaml
nginx/: nginx.conf
shell/: blue.sh  launch.sh  retropocket.conf
web/: index.html  index.html.bckup
web/css/: crt.css  styles.css  table.css  tabs.css  theme-aero-dark.css  theme-aero.css  theme-cyberpunk.css  theme-win95.css
web/js/: options.js  rain.js  screen.js  tabs.js
web/locales/: en.json  fr.json
